--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /TGC_SuggesterApp/TGC_SuggesterApp/TGC_SuggesterApp/bin/Debug/env.json
+/TGC_SuggesterApp/.vs
+/TGC_SuggesterApp/TGC_SuggesterApp/TGC_SuggesterApp/.vs
