--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+C:\Users\dvdst\Documents\Visual Studio 2022\Projects\TGC_SuggesterApp\TGC_SuggesterApp\TGC_SuggesterApp\TGC_SuggesterApp\.vs
+
 # User-specific files
 *.rsuser
 *.suo
